[package]
name = "crot"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["sqrtox"]
description = "CLI tool to test cron format."

[profile.release]
strip = "debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-tz = "0.8.5"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
confy = "0.6.0"
cron = "0.12.0"
similar = "2.4.0"
